unit test review-service and somo code cleaning